feat: Complete Categories, Attributes, Products and Variants (#17)
